Fixed spacing issue in sidebar

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -1767,7 +1767,7 @@ a.fa.fa-times.sidebar-message-close.fa-lg.archive {
   margin-left: -26px;
   padding-bottom: 20px;
   margin-top: -10px;
-  width: 200px;
+  width: 162px;
   line-height: 1.3;
   word-wrap: break-word;
 }
